message MessageUpdateBlock
{
    required int32 status   = 1;
    required string path    = 2;
    required int64 size     = 3;
    required int64 id       = 4;
    required int64 index    = 5;
}
